Fix collapse bug

--- a/src/navigator.scss
+++ b/src/navigator.scss
@@ -469,3 +469,12 @@ ol {
 	border-radius: 10px;
 	border: transparent;
 }
+
+.editor ol {
+	list-style: auto;
+	margin: 10px 0 10px 20px;
+}
+
+.editor p {
+	margin: 10px 0;
+}
